[tool.poetry]
name = "llm-tools"
version = "0.1.0"
description = ""
authors = ["Kazato Sugimoto <uiureo@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
bs4 = "^0.0.1"
tiktoken = "^0.3.3"
duckduckgo-search = "^2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
